--- a/hadoop/Vagrantfile
+++ b/hadoop/Vagrantfile
@@ -8,7 +8,7 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.provider "virtualbox" do |vb|
-    vb.customize [ "modifyvm", :id, "--memory", "1024" ]
+    #vb.customize [ "modifyvm", :id, "--memory", "1024" ]
   end
 
   config.vm.provision :puppet do |puppet|
