--- a/hadoop/Vagrantfile
+++ b/hadoop/Vagrantfile
@@ -39,6 +39,7 @@ Vagrant.configure("2") do |config|
   
    config.vm.define :master do |master_config|
     master_config.vm.network "private_network", ip: "10.10.0.52"
+    master_config.vm.network "forwarded_port", guest: 50070, host: 50070
     master_config.vm.host_name = "master"
   end
 
