--- a/hadoop/Vagrantfile
+++ b/hadoop/Vagrantfile
@@ -21,6 +21,7 @@ Vagrant.configure("2") do |config|
     node_name = "hadoopmaster"
     master_config.vm.network "private_network", ip: "10.10.0.50"
     master_config.vm.network "forwarded_port", guest: 50070, host: 50070
+    master_config.vm.network "forwarded_port", guest: 8088, host: 8088
     master_config.vm.host_name = node_name
     master_config.vm.provider :virtualbox do |vb|
       vb.name = node_name
