--- a/hadoop/Vagrantfile
+++ b/hadoop/Vagrantfile
@@ -20,7 +20,10 @@ Vagrant.configure("2") do |config|
   config.vm.define :hadoopmaster do |master_config|
     node_name = "hadoopmaster"
     master_config.vm.network "private_network", ip: "10.10.0.50"
+    # dfshealth
     master_config.vm.network "forwarded_port", guest: 50070, host: 50070
+    # browseDirectory 
+    master_config.vm.network "forwarded_port", guest: 50075, host: 50075
     master_config.vm.network "forwarded_port", guest: 8088, host: 8088
     master_config.vm.host_name = node_name
     master_config.vm.provider :virtualbox do |vb|
