--- a/openmpi/Vagrantfile
+++ b/openmpi/Vagrantfile
@@ -15,6 +15,9 @@ Vagrant.configure(2) do |config|
       node.vm.provider :virtualbox do |vb|
         # VM name
         vb.name = node_name
+        # More efficient use including OpenMP
+        vb.memory = 512
+        vb.cpus = 2
       end
       # Networking
       #node.vm.network :private_network, ip: "192.168.33.#{10+i}"
