--- a/soa/MovieBookWorm/.classpath
+++ b/soa/MovieBookWorm/.classpath
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_25">
-		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
@@ -22,5 +17,6 @@
 	<classpathentry exported="true" kind="lib" path="C:/Users/Nemanja/workspace/MovieBookWorm/WebContent/WEB-INF/lib/slf4j-api-1.7.10.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/Nemanja/workspace/MovieBookWorm/WebContent/WEB-INF/lib/slf4j-simple-1.7.10.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/Nemanja/workspace/MovieBookWorm/WebContent/WEB-INF/lib/xuggle-xuggler-5.4.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
