--- a/openmpi/Vagrantfile
+++ b/openmpi/Vagrantfile
@@ -2,6 +2,8 @@
 # vi: set ft=ruby :
 
 # Setup number of nodes
+host_number = 0;
+ethernet = true;
 node_count = 2
 
 Vagrant.configure(2) do |config|
@@ -9,7 +11,7 @@ Vagrant.configure(2) do |config|
   config.vm.box = "hashicorp/precise32"
   config.vm.provision :shell, path: "bootstrap.sh"
   # Machine specific
-  (1..node_count).each do |i|
+  ((host_number*node_count+1)..node_count).each do |i|
     node_name = "mpi-node-#{i}"
     config.vm.define node_name do |node|
       node.vm.provider :virtualbox do |vb|
@@ -21,7 +23,13 @@ Vagrant.configure(2) do |config|
       end
       # Networking
       #node.vm.network :private_network, ip: "192.168.33.#{10+i}"
-      node.vm.network :public_network, ip: "192.168.1.#{100+i}"
+      
+      if ethernet
+        static_ip = "169.254.15.#{200+i}"
+      else
+        static_ip = "192.168.1.#{100+i}"
+      end
+      node.vm.network :public_network, ip: static_ip
       node.vm.hostname = node_name
     end    
   end
