--- a/openmpi/Vagrantfile
+++ b/openmpi/Vagrantfile
@@ -11,7 +11,7 @@ Vagrant.configure(2) do |config|
   config.vm.box = "hashicorp/precise32"
   config.vm.provision :shell, path: "bootstrap.sh"
   # Machine specific
-  ((host_number*node_count+1)..node_count).each do |i|
+  ((host_number*node_count+1)..((host_number+1)*node_count)).each do |i|
     node_name = "mpi-node-#{i}"
     config.vm.define node_name do |node|
       node.vm.provider :virtualbox do |vb|
