--- a/soa/MovieBookWorm/WebContent/WEB-INF/web.xml
+++ b/soa/MovieBookWorm/WebContent/WEB-INF/web.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0" metadata-complete="true">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" metadata-complete="true" version="3.0">
   <display-name>MovieBookWorm</display-name>
   <welcome-file-list>
     <welcome-file>MovieClient</welcome-file>
@@ -20,5 +20,15 @@
   <servlet-mapping>
     <servlet-name>MovieClient</servlet-name>
     <url-pattern>/MovieClient</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>MovieClientApi</display-name>
+    <servlet-name>MovieClientApi</servlet-name>
+    <servlet-class>client.MovieClientApi</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>MovieClientApi</servlet-name>
+    <url-pattern>/MovieClientApi</url-pattern>
   </servlet-mapping>
 </web-app>
